8231988: Unexpected test result caused by C2 IdealLoopTree::do_remove_empty_loop

Duplicate cmp node in empty loop if it has other users

Co-authored-by: Tuo Xie <xietuo@huawei.com>
Reviewed-by: neliasso, thartmann